--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Doctor Appointment</title>
   </head>
-  <body class="p-0 m-0 box-border bg-slate-50">
+  <body class="p-0 m-0 box-border ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
